--- a/login/inicioSesion_usuario.html
+++ b/login/inicioSesion_usuario.html
@@ -21,7 +21,7 @@
         </div>
         <ul class="menu">
             <li><a href="../index.html">Inicio</a></li>
-            <li><a href="../Pagina Reserva/bienvenida.php">Casilleros</a></li>
+            <li><a href="inicioSesion_usuario.html">Casilleros</a></li>
             <li><a href="../contactenos/contacto.html">Contacto</a></li>
         </ul>
         <div class="user-icon"> 
