--- a/Contactenos/contacto.html
+++ b/Contactenos/contacto.html
@@ -19,7 +19,7 @@
         </div>
         <ul class="menu">
             <li><a href="../estudiante/index_estudiante.php">Inicio</a></li>
-            <li><a href="../pagina reserva/bienvenida.php">Casilleros</a></li>
+            <li><a href="../pagina reserva/bienvenida.html">Casilleros</a></li>
             <li><a href="../contactenos/contacto.html">Contacto</a></li>
         </ul>
         <div class="user-icon"> 
