--- a/pagina reserva/bienvenida.html
+++ b/pagina reserva/bienvenida.html
@@ -15,12 +15,13 @@
             <span class="logo-text">Lock&Go</span>
         </div>
         <ul class="menu">
-            <li><a href="../Pagina index/index.html">Inicio</a></li>
+            <li><a href="../estudiante/index_estudiante.php">Inicio</a></li>
             <li><a href="../Pagina Reserva/bienvenida.html">Casilleros</a></li>
             <li><a href="../contactenos/contacto.html">Contacto</a></li>
         </ul>
         <div class="user-icon">
-            <a href="../login/inicioSesion_usuario.html"><img src="../Imagenes/perfil.png" alt="Perfil"></a>
+            <a href="../estudiante/editar_perfil.php"><img src="../Imagenes/perfil.png" alt="Perfil"></a>
+            <a href="../login/logout.php" class="cerrar"><img src="../Imagenes/cerrar.png" alt="Cerrar Sesion"></a>
         </div>
     </nav>
 
