--- a/Contactenos/contacto.html
+++ b/Contactenos/contacto.html
@@ -23,7 +23,7 @@
             <li><a href="../contactenos/contacto.html">Contacto</a></li>
         </ul>
         <div class="user-icon"> 
-            <a href="../login/inicioSesion_usuario.html"><img src="../Imagenes/perfil.png" alt="Perfil"></a>
+            <a href="../estudiante/editar_perfil.php"><img src="../Imagenes/perfil.png" alt="Perfil"></a>
         </div>
     </nav>
 
