--- a/pagina reserva/bienvenida.html
+++ b/pagina reserva/bienvenida.html
@@ -44,6 +44,12 @@
         <div class="contenido-ventana">
             <h3>Reservar Casillero</h3>
             <p>¿Deseas reservar el casillero <span id="numeroCasillero"></span>?</p>
+              <p class="limite-tiempo">
+                ⏰ Recuerda que el uso límite es hasta las <strong>10:00 PM</strong>.
+              </p>
+              <p class="advertencia">
+                ⚠️ Si se excede el tiempo límite, serás penalizado de acuerdo al <em>manual del Aprendiz</em>.
+              </p>
             <form id="formReservar">
                 <input type="hidden" id="casilleroIdInput" name="casillero_id">
                 <input type="hidden" id="estudianteIdInput" name="estudiante_id">
